# mlops-zoomcamp

./: LICENSE  pyproject.toml
01-intro/: duration_prediction.ipynb  homework.ipynb  infrastructure.md
